--- a/source/_posts/毕业前随想.md
+++ b/source/_posts/毕业前随想.md
@@ -18,4 +18,4 @@ categories:
 时间这种东西，其实并不能改变什么。我们只是在时间的长河里奔赴一个个的下一站，我们遇见了不同的人，看尽别人不同的人生。然后我终于明白，那年那些选择那些放弃和坚持，都是基于当时我们的视野范围和认知水平，做出了最合乎自己心意的事情罢了。生活慢慢地回到自己的轨道上，以前对未来不确定的恐惧渐渐地变得对未来那些无限的可能期待。不再去过多的纠结于那些被普遍认为的重要的人生的十字路口，毕竟那些决定都已经在自己心里做好，那些决定都是基于自己的学识而做出的。
 
 
-<iframe src="http://open.iqiyi.com/developer/player_js/coopPlayerIndex.html?vid=717a1613661befb023cc8039b9fe58a5&tvId=36700960409&accessToken=2.f22860a2479ad60d8da7697274de9346&appKey=3955c3425820435e86d0f4cdfe56f5e7&appId=1368&height=100%&width=100%" frameborder="0" allowfullscreen="true" width="100%" height=720></iframe>
+<iframe src="https://open.iqiyi.com/developer/player_js/coopPlayerIndex.html?vid=717a1613661befb023cc8039b9fe58a5&tvId=36700960409&accessToken=2.f22860a2479ad60d8da7697274de9346&appKey=3955c3425820435e86d0f4cdfe56f5e7&appId=1368&height=100%&width=100%" frameborder="0" allowfullscreen="true" width="100%" height=720></iframe>
