--- a/source/_posts/数学公式.md
+++ b/source/_posts/数学公式.md
@@ -25,34 +25,44 @@ $$\sin(-\alpha)=-\sin\alpha$$
 $$\cos(-\alpha)=\cos\alpha$$
 $$\tan(-\alpha)=-\tan\alpha$$
 $$\cot(-\alpha)=\cot\alpha$$
-$$\left. \begin{aligned} &\sin(\frac\pi2-\alpha)=\cos\alpha \\ &\cos(\frac\pi2-\alpha)=\sin\alpha \\ &\tan(\frac\pi2-\alpha)=\cot\alpha \\ &\cot(\frac\pi2-\alpha)=\tan\alpha \\ & \\ &\sin(\frac\pi2+\alpha)=\cos\alpha \\ &\cos(\frac\pi2+\alpha)=-\sin\alpha \\ &\tan(\frac\pi2+\alpha)=-\cot\alpha \\ &\cot(\frac\pi2+\alpha)=-\tan\alpha \end{aligned} \right.
- \left. \begin{aligned} &\sin(\pi-\alpha)=\sin\alpha \\ &\cos(\pi-\alpha)=-\cos\alpha \\ &\tan(\pi-\alpha)=-\tan\alpha \\ &\cot(\pi-\alpha)=-\cot\alpha \\ & \\ & \\ & \\ &\sin(\pi+\alpha)=-\sin\alpha \\ &\cos(\pi+\alpha)=-\cos\alpha \\ &\tan(\pi+\alpha)=\tan\alpha \\ &\cot(\pi+\alpha)=\cot\alpha \end{aligned} \right.
- \left. \begin{aligned} &\sin(\frac{3\pi}{2}-\alpha)=-\cos\alpha \\ &\cos(\frac{3\pi}{2}-\alpha)=-\sin\alpha \\ &\tan(\frac{3\pi}{2}-\alpha)=\cot\alpha \\ &\cot(\frac{3\pi}{2}-\alpha)=\tan\alpha \\ & \\ &\sin(\frac{3\pi}{2}+\alpha)=-\cos\alpha \\ &\cos(\frac{3\pi}{2}+\alpha)=\sin\alpha \\ &\tan(\frac{3\pi}{2}+\alpha)=-\cot\alpha \\ &\cot(\frac{3\pi}{2}+\alpha)=-\tan\alpha \end{aligned} \right.
-\left. \begin{aligned} &\sin(2\pi-\alpha)=-\sin\alpha \\ &\cos(2\pi-\alpha)=\cos\alpha \\ &\tan(2\pi-\alpha)=-\tan\alpha \\ &\cot(2\pi-\alpha)=-\cot\alpha \\ & \\ & \\ & \\ &\sin(2\pi+\alpha)=\sin\alpha \\ &\cos(2\pi+\alpha)=\cos\alpha \\ &\tan(2\pi+\alpha)=\tan\alpha \\ &\cot(2\pi+\alpha)=\cot\alpha \end{aligned} \right.$$
+\begin{array}{c|c|c}
+\frac\pi2-\alpha & \frac\pi2+\alpha & \pi-\alpha \\\\
+\hline
+{\sin(\frac\pi2-\alpha)=\cos\alpha \\\\ \cos(\frac\pi2-\alpha)=\sin\alpha \\\\ \tan(\frac\pi2-\alpha)=\cot\alpha \\\\ \cot(\frac\pi2-\alpha)=\tan\alpha} &
+{\sin(\frac\pi2+\alpha)=\cos\alpha \\\\ \cos(\frac\pi2+\alpha)=-\sin\alpha \\\\ \tan(\frac\pi2+\alpha)=-\cot\alpha \\\\ \cot(\frac\pi2+\alpha)=-\tan\alpha}& 
+{\sin(\pi-\alpha)=\sin\alpha \\\\ \cos(\pi-\alpha)=-\cos\alpha \\\\ \tan(\pi-\alpha)=-\tan\alpha \\\\ \cot(\pi-\alpha)=-\cot\alpha}
+\end{array}
+\begin{array}{c|c|c}
+\pi+\alpha & \frac{3\pi}{2}-\alpha & \frac{3\pi}{2}+\alpha\\\\
+\hline
+{\sin(\pi+\alpha)=-\sin\alpha \\\\ \cos(\pi+\alpha)=-\cos\alpha \\\\ \tan(\pi+\alpha)=\tan\alpha \\\\ \cot(\pi+\alpha)=\cot\alpha}&
+{\sin(\frac{3\pi}{2}-\alpha)=-\cos\alpha \\\\ \cos(\frac{3\pi}{2}-\alpha)=-\sin\alpha \\\\ \tan(\frac{3\pi}{2}-\alpha)=\cot\alpha \\\\ \cot(\frac{3\pi}{2}-\alpha)=\tan\alpha}&
+{\sin(\frac{3\pi}{2}+\alpha)=-\cos\alpha \\\\ \cos(\frac{3\pi}{2}+\alpha)=\sin\alpha \\\\ \tan(\frac{3\pi}{2}+\alpha)=-\cot\alpha \\\\ \cot(\frac{3\pi}{2}+\alpha)=-\tan\alpha}
+\end{array}
 
 ## 两角和与差的三角函数公式
-$$\left. \begin{aligned} &\sin(\alpha\pm\beta)=\sin\alpha\cos\beta\pm\cos\alpha\sin\beta \\ &\cos(\alpha\pm\beta)=\cos\alpha\cos\beta\mp\sin\alpha\sin\beta \\ &\tan(\alpha\pm\beta)=\frac{\tan\alpha\pm\tan\beta}{1-\tan\alpha\cdot\tan\beta} \end{aligned} \right.$$
+$$\left. \begin{aligned} &\sin(\alpha\pm\beta)=\sin\alpha\cos\beta\pm\cos\alpha\sin\beta \\\\ &\cos(\alpha\pm\beta)=\cos\alpha\cos\beta\mp\sin\alpha\sin\beta \\\\ &\tan(\alpha\pm\beta)=\frac{\tan\alpha\pm\tan\beta}{1-\tan\alpha\cdot\tan\beta} \end{aligned} \right.$$
 
 ## 万能公式
-$$\left. \begin{aligned} &\sin\alpha=\frac{2\tan(\alpha/2)}{1+\tan^2(\alpha/2)} \\ &\cos\alpha=\frac{1-\tan^2(\alpha/2)}{1+\tan^2(\alpha/2)} \\ &\tan\alpha=\frac{2\tan(\alpha/2)}{1-\tan^2(\alpha/2)} \end{aligned} \right.$$
+$$\left. \begin{aligned} &\sin\alpha=\frac{2\tan(\alpha/2)}{1+\tan^2(\alpha/2)} \\\\ &\cos\alpha=\frac{1-\tan^2(\alpha/2)}{1+\tan^2(\alpha/2)} \\\\ &\tan\alpha=\frac{2\tan(\alpha/2)}{1-\tan^2(\alpha/2)} \end{aligned} \right.$$
 
 ## 半角公式
-$$\left. \begin{aligned} &\sin\left(\frac{\alpha}{2}\right)=\pm\sqrt{\frac{1-\cos\alpha}{2}} \\ &\cos\left(\frac{\alpha}{2}\right)=\pm\sqrt{\frac{1+\cos\alpha}{2}} \\ &\tan\left(\frac{\alpha}{2}\right)=\pm\sqrt{\frac{1-\cos\alpha}{1+\cos\alpha}}=\frac{1-\cos\alpha}{\sin\alpha}=\frac{\sin\alpha}{1+\cos\alpha} \end{aligned} \right.$$
+$$\left. \begin{aligned} &\sin\left(\frac{\alpha}{2}\right)=\pm\sqrt{\frac{1-\cos\alpha}{2}} \\\\ &\cos\left(\frac{\alpha}{2}\right)=\pm\sqrt{\frac{1+\cos\alpha}{2}} \\\\ &\tan\left(\frac{\alpha}{2}\right)=\pm\sqrt{\frac{1-\cos\alpha}{1+\cos\alpha}}=\frac{1-\cos\alpha}{\sin\alpha}=\frac{\sin\alpha}{1+\cos\alpha} \end{aligned} \right.$$
 
 ## 降幂公式
-$$\left. \begin{aligned} &\sin^2\alpha=\frac{1-\cos2\alpha}{2} \\ &\cos^2\alpha=\frac{1+\cos2\alpha}{2} \end{aligned} \right.$$
+$$\left. \begin{aligned} &\sin^2\alpha=\frac{1-\cos2\alpha}{2} \\\\ &\cos^2\alpha=\frac{1+\cos2\alpha}{2} \end{aligned} \right.$$
 
 ## 二倍角公式
-$$\left. \begin{aligned} &\sin2\alpha=2\sin\alpha\cos\alpha \\ &\cos2\alpha=\cos^2\alpha-\sin^2\alpha=2\cos^2\alpha-1=1-2\sin^2\alpha=\frac{1-\tan^2\alpha}{1+\tan^2\alpha} \\ &\tan2\alpha=\frac{2\tan\alpha}{1-\tan^2\alpha}=\frac{2\cot\alpha}{\cot^2\alpha-1}=\frac{2}{\cot\alpha-\tan\alpha} \\ &\cot2\alpha=\frac{\cot^2\alpha-1}{2\cot\alpha}=\frac{1-\tan^2\alpha}{2\tan\alpha}=\frac{\cot\alpha-\tan\alpha}{2} \end{aligned} \right.$$
+$$\left. \begin{aligned} &\sin2\alpha=2\sin\alpha\cos\alpha \\\\ &\cos2\alpha=\cos^2\alpha-\sin^2\alpha=2\cos^2\alpha-1=1-2\sin^2\alpha=\frac{1-\tan^2\alpha}{1+\tan^2\alpha} \\\\ &\tan2\alpha=\frac{2\tan\alpha}{1-\tan^2\alpha}=\frac{2\cot\alpha}{\cot^2\alpha-1}=\frac{2}{\cot\alpha-\tan\alpha} \\\\ &\cot2\alpha=\frac{\cot^2\alpha-1}{2\cot\alpha}=\frac{1-\tan^2\alpha}{2\tan\alpha}=\frac{\cot\alpha-\tan\alpha}{2} \end{aligned} \right.$$
 
 ## 三倍角公式
-$$\left. \begin{aligned} &\sin3\alpha=3\sin\alpha-4\sin^3\alpha \\ &\cos3\alpha=-3\cos\alpha+4\cos^3\alpha \\ &\tan3\alpha=\frac{3\tan\alpha-\tan^3\alpha}{1-3\tan^2\alpha}=\tan\alpha\tan\left(\frac\pi3+\alpha\right)\tan\left(\frac\pi3-\alpha\right) \\ &\cot3\alpha=\frac{3\cot\alpha-\cot^3\alpha}{1-3\cot^2\alpha} \end{aligned} \right.$$
+$$\left. \begin{aligned} &\sin3\alpha=3\sin\alpha-4\sin^3\alpha \\\\ &\cos3\alpha=-3\cos\alpha+4\cos^3\alpha \\\\ &\tan3\alpha=\frac{3\tan\alpha-\tan^3\alpha}{1-3\tan^2\alpha}=\tan\alpha\tan\left(\frac\pi3+\alpha\right)\tan\left(\frac\pi3-\alpha\right) \\\\ &\cot3\alpha=\frac{3\cot\alpha-\cot^3\alpha}{1-3\cot^2\alpha} \end{aligned} \right.$$
 
 ## 和差化积公式
-$$\left. \begin{aligned} &\sin\alpha+\sin\beta=2\sin\frac{\alpha+\beta}{2}\cdot\cos\frac{\alpha-\beta}{2} \\ &\sin\alpha-\sin\beta=\sin\alpha+\sin(-\beta)=2\cos\frac{\alpha+\beta}{2}\cdot\sin\frac{\alpha-\beta}{2} \\ &\cos\alpha+\cos\beta=2\cos\frac{\alpha+\beta}{2}\cdot\cos\frac{\alpha-\beta}{2} \\ &\cos\alpha-\cos\beta=-2\sin\frac{\alpha+\beta}{2}\cdot\sin\frac{\alpha-\beta}{2} \end{aligned} \right.$$
+$$\left. \begin{aligned} &\sin\alpha+\sin\beta=2\sin\frac{\alpha+\beta}{2}\cdot\cos\frac{\alpha-\beta}{2} \\\\ &\sin\alpha-\sin\beta=\sin\alpha+\sin(-\beta)=2\cos\frac{\alpha+\beta}{2}\cdot\sin\frac{\alpha-\beta}{2} \\\\ &\cos\alpha+\cos\beta=2\cos\frac{\alpha+\beta}{2}\cdot\cos\frac{\alpha-\beta}{2} \\\\ &\cos\alpha-\cos\beta=-2\sin\frac{\alpha+\beta}{2}\cdot\sin\frac{\alpha-\beta}{2} \end{aligned} \right.$$
 
 ##  积化和差公式
-$$\left. \begin{aligned} &\sin\alpha\cdot\cos\beta=\frac12[\sin(\alpha+\beta)+\sin(\alpha-\beta)] \\ &\cos\alpha\cdot\sin\beta=\frac12[\sin(\alpha+\beta)+\sin(\beta-\alpha)]=\frac12[\sin(\alpha+\beta)-\sin(\alpha-\beta)] \\ &\cos\alpha\cdot\cos\beta=\frac12[\cos(\alpha+\beta)+\cos(\alpha-\beta)] \\ &\sin\alpha\cdot\sin\beta=-\frac12[\cos(\alpha+\beta)-\cos(\alpha-\beta)] \end{aligned} \right.$$
+$$\left. \begin{aligned} &\sin\alpha\cdot\cos\beta=\frac12[\sin(\alpha+\beta)+\sin(\alpha-\beta)] \\\\ &\cos\alpha\cdot\sin\beta=\frac12[\sin(\alpha+\beta)+\sin(\beta-\alpha)]=\frac12[\sin(\alpha+\beta)-\sin(\alpha-\beta)] \\\\ &\cos\alpha\cdot\cos\beta=\frac12[\cos(\alpha+\beta)+\cos(\alpha-\beta)] \\\\ &\sin\alpha\cdot\sin\beta=-\frac12[\cos(\alpha+\beta)-\cos(\alpha-\beta)] \end{aligned} \right.$$
 
 ## 辅助角的三角函数公式
 $$a\sin x+b\cos x=\sqrt{a^2+b^2}\sin(x+\arctan\frac ba)$$
