--- a/source/_posts/数学公式.md
+++ b/source/_posts/数学公式.md
@@ -24,7 +24,7 @@ $$1+\cot^2\alpha=\csc^2\alpha$$
 $$\sin(-\alpha)=-\sin\alpha$$
 $$\cos(-\alpha)=\cos\alpha$$
 $$\tan(-\alpha)=-\tan\alpha$$
-$$\cot(-\alpha)=\cot\alpha$$
+$$\cot(-\alpha)=-\cot\alpha$$
 \begin{array}{c|c|c}
 \frac\pi2-\alpha & \frac\pi2+\alpha & \pi-\alpha \\\\
 \hline
