--- a/source/_posts/轨迹跟踪学习笔记.md
+++ b/source/_posts/轨迹跟踪学习笔记.md
@@ -34,25 +34,25 @@ $$
 # 运动学建模
 运动学公式：
 $$
-\begin{array}{c}
-f(v, \theta) = \dot{x} = v\cos \theta \\
-g(v, \theta) = \dot{y} = v\sin \theta  \\
+\begin{array}{c} \\\\ &
+f(v, \theta) = \dot{x} = v\cos \theta \\\\ &
+g(v, \theta) = \dot{y} = v\sin \theta  \\\\ &
 \dot{\theta } = \omega 
 \end{array} 
 $$
 所以：
 $$
-\begin{array}{c}
-f_{v}'(v, \theta) = \cos \theta \\
-f_{\theta }'(v, \theta) = -v\sin \theta \\
-g_{v}'(v, \theta) = \sin \theta  \\
-g_{\theta }'(v, \theta) = v\cos \theta  \\
+\begin{array}{c} \\\\ &
+f_{v}'(v, \theta) = \cos \theta \\\\ &
+f_{\theta }'(v, \theta) = -v\sin \theta \\\\ &
+g_{v}'(v, \theta) = \sin \theta  \\\\ &
+g_{\theta }'(v, \theta) = v\cos \theta  \\\\ &
 \end{array} 
 $$
 运动学公式一阶近似得:
 $$
-\begin{array}{c}
-\dot{x}\approx v_{k}\cos \theta_{k} + (v - v_{k})\cos \theta _{k} - (\theta - \theta _{k})v_{k}\sin \theta_{k}  \\
+\begin{array}{c} \\\\ &
+\dot{x}\approx v_{k}\cos \theta_{k} + (v - v_{k})\cos \theta _{k} - (\theta - \theta _{k})v_{k}\sin \theta_{k}  \\\\ &
 \dot{y}\approx v_{k}\sin \theta _{k} + (v - v_{k})\sin \theta _{k} + (\theta - \theta _{k})v_{k}\cos \theta _{k} 
 \end{array}
 $$
