--- a/source/_posts/轨迹跟踪学习笔记.md
+++ b/source/_posts/轨迹跟踪学习笔记.md
@@ -55,7 +55,7 @@ $$
 $$
 \begin{array}{c} \\\\ &
 \dot{x}\approx v_{k}\cos \theta_{k} + (v - v_{k})\cos \theta _{k} - (\theta - \theta _{k})v_{k}\sin \theta_{k}  \\\\ &
-\dot{y}\approx v_{k}\sin \theta _{k} + (v - v_{k})\sin \theta _{k} + (\theta - \theta _{k})v_{k}\cos \theta _{k} 
+\dot{y}\approx v_{k}\sin \theta _{k} + (v - v_{k})\sin \theta _{k} + (\theta - \theta _{k})v_{k}\cos \theta _{k} \\\\ &
 \end{array}
 $$
 
