--- a/source/_posts/轨迹跟踪学习笔记.md
+++ b/source/_posts/轨迹跟踪学习笔记.md
@@ -32,7 +32,7 @@ f\left(x^{1}, x^{2}, \ldots, x^{n}\right)=f\left(x_{k}^{1}, x_{k}^{2}, \ldots, x
 $$
 
 # 运动学建模
-运动学公式：
+- 运动学公式
 $$
 \begin{array}{c} \\\\ &
 f(v, \theta) = \dot{x} = v\cos \theta \\\\ &
@@ -40,7 +40,7 @@ g(v, \theta) = \dot{y} = v\sin \theta  \\\\ &
 \dot{\theta } = \omega 
 \end{array} 
 $$
-所以：
+偏导数：
 $$
 \begin{array}{c} \\\\ &
 f_{v}'(v, \theta) = \cos \theta \\\\ &
@@ -53,9 +53,11 @@ $$
 运动学公式一阶近似得:  
 
 $$
+\left. 
 \begin{aligned} 
 \dot{x} & \approx v_{k}\cos \theta_{k} + (v - v_{k})\cos \theta _{k} - (\theta - \theta _{k})v_{k}\sin \theta_{k}  \\
 \dot{y} & \approx v_{k}\sin \theta _{k} + (v - v_{k})\sin \theta _{k} + (\theta - \theta _{k})v_{k}\cos \theta _{k} 
 \end{aligned}
+\right. 
 $$
 
