--- a/source/_posts/轨迹跟踪学习笔记.md
+++ b/source/_posts/轨迹跟踪学习笔记.md
@@ -50,14 +50,11 @@ g_{\theta }'(v, \theta) = v\cos \theta  \\\\ &
 \end{array} 
 $$
 
-运动学公式一阶近似得:  
 $$
-\left. 
-\begin{aligned} 
-x & \approx v_{k}\cos \theta_{k} + (v - v_{k})\cos \theta _{k} - (\theta - \theta _{k})v_{k}\sin \theta_{k}  \\
-y & \approx v_{k}\sin \theta _{k} + (v - v_{k})\sin \theta _{k} + (\theta - \theta _{k})v_{k}\cos \theta _{k} 
-\end{aligned}
-\right. 
+\begin{array}{c}  
+\dot{x} & \approx v_{k}\cos \theta_{k} + (v - v_{k})\cos \theta _{k} - (\theta - \theta _{k})v_{k}\sin \theta_{k}  \\
+\dot{y} & \approx v_{k}\sin \theta _{k} + (v - v_{k})\sin \theta _{k} + (\theta - \theta _{k})v_{k}\cos \theta _{k} 
+\end{array}
 $$
 
 
