--- a/source/_posts/轨迹跟踪学习笔记.md
+++ b/source/_posts/轨迹跟踪学习笔记.md
@@ -51,6 +51,14 @@ g_{\theta }'(v, \theta) = v\cos \theta  \\\\ &
 $$
 
 $$
+\begin{array}{c} \\\\ &
+f_{v}'(v, \theta) = \cos \theta \\\\ &
+f_{\theta }'(v, \theta) = -v\sin \theta \\\\ &
+g_{v}'(v, \theta) = \sin \theta  \\\\ &
+g_{\theta }'(v, \theta) = v\cos \theta  \\\\ &
+\end{array} 
+$$
+$$
 \begin{array}{c}  
 \dot{x} & \approx v_{k}\cos \theta_{k} + (v - v_{k})\cos \theta _{k} - (\theta - \theta _{k})v_{k}\sin \theta_{k}  \\
 \dot{y} & \approx v_{k}\sin \theta _{k} + (v - v_{k})\sin \theta _{k} + (\theta - \theta _{k})v_{k}\cos \theta _{k} 
