--- a/source/_posts/轨迹跟踪学习笔记.md
+++ b/source/_posts/轨迹跟踪学习笔记.md
@@ -52,17 +52,9 @@ $$
 
 $$
 \begin{array}{c} \\\\ &
-f_{v}'(v, \theta) = \cos \theta \\\\ &
-f_{\theta }'(v, \theta) = -v\sin \theta \\\\ &
-g_{v}'(v, \theta) = \sin \theta  \\\\ &
-g_{\theta }'(v, \theta) = v\cos \theta  \\\\ &
+\dot{x} & \approx v_{k}\cos \theta_{k} + (v - v_{k})\cos \theta _{k} - (\theta - \theta _{k})v_{k}\sin \theta_{k}  \\\\ $
+\dot{y} & \approx v_{k}\sin \theta _{k} + (v - v_{k})\sin \theta _{k} + (\theta - \theta _{k})v_{k}\cos \theta_{k} \\\\ &
 \end{array} 
-$$
-$$
-\begin{array}{c}  
-\dot{x} & \approx v_{k}\cos \theta_{k} + (v - v_{k})\cos \theta _{k} - (\theta - \theta _{k})v_{k}\sin \theta_{k}  \\
-\dot{y} & \approx v_{k}\sin \theta _{k} + (v - v_{k})\sin \theta _{k} + (\theta - \theta _{k})v_{k}\cos \theta _{k} 
-\end{array}
 $$
 
 
