--- a/source/_posts/轨迹跟踪学习笔记.md
+++ b/source/_posts/轨迹跟踪学习笔记.md
@@ -52,8 +52,8 @@ $$
 
 $$
 \begin{array}{c} \\\\ &
-\dot{x} & \approx v_{k}\cos \theta_{k} + (v - v_{k})\cos \theta _{k} - (\theta - \theta _{k})v_{k}\sin \theta_{k}  \\\\ $
-\dot{y} & \approx v_{k}\sin \theta _{k} + (v - v_{k})\sin \theta _{k} + (\theta - \theta _{k})v_{k}\cos \theta_{k} \\\\ &
+g_{\theta }'(v, \theta) = v\cos \theta  \\\\ &
+\dot{x}\approx v_{k}\cos \theta_{k} + (v - v_{k})\cos \theta _{k} - (\theta - \theta _{k})v_{k}\sin \theta_{k}  \\
 \end{array} 
 $$
 
