--- a/source/_posts/轨迹跟踪学习笔记.md
+++ b/source/_posts/轨迹跟踪学习笔记.md
@@ -53,6 +53,7 @@ $$
 $$
 \begin{array}{c} \\\\ &
 g_{\theta }'(v, \theta) = v\cos \theta  \\\\ &
+\dot{x} \approx v_{k}\sin \theta  \\\\ &
 \end{array} 
 $$
 
