--- a/source/_posts/轨迹跟踪学习笔记.md
+++ b/source/_posts/轨迹跟踪学习笔记.md
@@ -54,6 +54,7 @@ $$
 \begin{array}{c} \\\\ &
 g_{\theta }'(v, \theta) = v\cos \theta  \\\\ &
 \dot{x} \approx v_{k}\sin \theta  \\\\ &
+\dot{x} \approx v_{k}\cos \theta_{k} + (v - v_{k})\cos \theta_{k} - (\theta - \theta_{k})v_{k}\sin \theta_{k}  \\\\ &
 \end{array} 
 $$
 
