--- a/source/_posts/轨迹跟踪学习笔记.md
+++ b/source/_posts/轨迹跟踪学习笔记.md
@@ -26,7 +26,7 @@ $$
 $$
 \begin{array}{c}
 f\left(x^{1}, x^{2}, \ldots, x^{n}\right)=f\left(x_{k}^{1}, x_{k}^{2}, \ldots, x_{k}^{n}\right)+\sum_{i=1}^{n}\left(x^{i}-x_{k}^{i}\right) f_{x^{i}}^{\prime}\left(x_{k}^{1}, x_{k}^{2}, \ldots, x_{k}^{n}\right) \\
-+\frac{1}{2!} \sum_{i, j=1}^{n}\left(x^{i}-x_{k}^{i}\right)\left(x^{j}-x_{k}^{j}\right) f_{i j}^{\prime \prime}\left(x_{k}^{1}, x_{k}^{2}, \ldots, x_{k}^{n}\right) \\
++\frac{1}{2!} \sum_{i, j=1}^{n}\left(x^{i}-x_{k}^{i}\right)\left(x^{j}-x_{k}^{j}\right) f_{x^i x^j}^{\prime \prime}\left(x_{k}^{1}, x_{k}^{2}, \ldots, x_{k}^{n}\right) \\
 +o^{n}
 \end{array}
 $$
@@ -55,7 +55,7 @@ $$
 $$
 \left. 
 \begin{aligned} 
-\dot{x} & \approx v_{k}\cos \theta_{k} + (v - v_{k})\cos \theta_{k} - (\theta - \theta_{k})v_{k}\sin \theta_{k}  \\
+\dot{x} & \approx v_{k}\cos \theta_{k} + (v - v_{k})\cos \theta_{k} - (\theta - \theta_{k})v_{k}\sin \theta_{k}  \\\\
 \dot{y} & \approx v_{k}\sin \theta_{k} + (v - v_{k})\sin \theta_{k} + (\theta - \theta_{k})v_{k}\cos \theta_{k} 
 \end{aligned}
 \right. 
